--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Clon De Google</title>
     <link rel="stylesheet" href="./CSS/style.css">
+    <title>Clon De Google</title>
+        
 </head>
 <body>
     <header>
@@ -40,8 +41,8 @@
         <ul class="footer-left">
             <li><a href="#">Publicidad</a></li>
             <li><a href="#">Negocios</a></li>
-            <li><a href="#">Acerca De </a></li>
-            <li><a href="#">Como Funciona la Busqeda</a></li>
+            <li><a href="#">AcercaDe </a></li>
+            <li><a href="#">ComoFuncionaBusqeda</a></li>
         </ul>
         <ul class="footer-right">
             <li><a href="#">Privacidad</a></li>
