--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
         <ul class="footer-left">
             <li><a href="#">Publicidad</a></li>
             <li><a href="#">Negocios</a></li>
-            <li><a href="#">AcercaDe </a></li>
-            <li><a href="#">ComoFuncionaBusqeda</a></li>
+            <li><a href="#">Acerca De </a></li>
+            <li><a href="#">Como Funciona</a></li>
         </ul>
         <ul class="footer-right">
             <li><a href="#">Privacidad</a></li>
